--- a/Adult/2/dev/less/button.less
+++ b/Adult/2/dev/less/button.less
@@ -1,23 +1,11 @@
 
 .checked__textContainer {
-  .flex;
-  .items-center;
-  .justify-center;
-
   background: @back-button-container-image;
   color: @color-button-buy;
 
   border-top-left-radius: @border-r-button-container;
   border-top-right-radius: @border-r-button-container;
 
-  padding: 3px;
-  .xxs( padding, 6px );
-
-
-  margin-bottom: 10px;
-  .landscape( margin-bottom, 3px);
-  .landscape-h( @xxs, margin-bottom, 7px );
-  .landscape-h( @xs, margin-bottom, 10px )
 }
 
 @back-small-box-image: url('../images/back-small-box.png');
@@ -111,6 +99,9 @@
 
 @color-button-buy: rgb(255, 255, 255);
 .button__buy {
+  .flex;
+  .items-center;
+  .justify-center;
   font-size: 3.1rem;
   .xs( font-size, 3.7rem );
   color: @color-button-buy;
@@ -118,7 +109,6 @@
   border-bottom-left-radius: @border-r-button-container;
   border-bottom-right-radius: @border-r-button-container;
   opacity: 0;
-  .flex-center;
 }
 
 @back-button-icon-image: url('../images/button-icon.png');
